--- a/index.html
+++ b/index.html
@@ -2,27 +2,29 @@
 <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
-  <title>FIRSTNAME LASTNAME's WRA 210 Course Website</title>
+  <title>Kate Johnson's WRA 210 Course Website</title>
 
 </head>
 <body>
 
   <header>
-	  <h1>YOUR NAME's WRA 210 Course Website</h1>
+	  <h1>Kate Johnson's WRA 210 Course Website</h1>
 	  <p>A repository for all of the course materials I prepare for WRA 210</p>
   </header>
   
   <div role="main">
   
 	  <ul>
-		  <li><a href="module1/index.html">Link to Module 1</a></li>
+		  <li><a href="module1.pdf" target="_blank">Module 1</a><br>
+<a href="module2.pdf" target="_blank">Module 2</a><br>
+<a href="module3.pdf" target="_blank">Module 3</a><br></li>
 		  <li><a href="module2/index.html">Link to Module 2</a></li>
 	  </ul>
 
   </div>
   
   <footer>
-	  <p>Copyright &copy; YOUR NAME.</p>
+	  <p>Copyright &copy; Kate Johnson.</p>
   </footer>
 
 </body>
