--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div role="main">
   
 	  <ul>
-		  <li><a href="module1.pdf" target="_blank">Module 1</a><br>
-<a href="module2.pdf" target="_blank">Module 2</a><br>
-<a href="module3.pdf" target="_blank">Module 3</a><br></li>
+		  <li><a href="module1.pdf" target="_blank">Module 1</a></li>
+		  <li><a href="module2.pdf" target="_blank">Module 2</a></li>
+		  <li><a href="module3.pdf" target="_blank">Module 3</a></li>
 	  </ul>
 
   </div>
