--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 		  <li><a href="module1.pdf" target="_blank">Module 1</a></li>
 		  <li><a href="module2.pdf" target="_blank">Module 2</a></li>
 		  <li><a href="module3.pdf" target="_blank">Module 3</a></li>
+		  <li><a href="module4.pdf" target="_blank">Module 4</a></li>
 	  </ul>
 
   </div>
   
   <footer>
-	  <p>Copyright &copy; Kate Johnson.</p>
+	  <p>Copyright &copy; Kate Johnson</p>
   </footer>
 
 </body>
