--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		 <ol>
 		  <li><a href="module3.pdf" target="_blank">Module 3</a></li>
 		  <li><a href="module4.pdf" target="_blank">Module 4
-		   <-!-Start nested list-->
+		   <!--Start nested list-->
 		    <ol>
 		     <li>Sketch:sitemap</li>
 		     <li>Sketch:wireframe</li>
