--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		  <li><a href="module1.pdf" target="_blank">Module 1</a></li>
 		  <li><a href="module2.pdf" target="_blank">Module 2</a></li>
 		  <li><a href="module3.pdf" target="_blank">Module 3</a></li>
-		  <li><a href="module4.pdf" target="_blank">Module 4
+		  <li>Module 4
 		   <!--Start nested list-->
 		    <ol>
 		     <li>Sketch:sitemap</li>
@@ -30,7 +30,7 @@
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
 		   <li>module 5</li>
-		  </ol>
+		  
 	  </ul>
 
   </div>
