--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  <li>Module 4
 		   <!--Start nested list-->
 		    <ol>
-		     <li><a href="sitemap.pdf" target="_blank">Sketch:Sitemap</li>
+		     <li><a href=" " target="_blank">Sketch:Sitemap</li>
 		     <li>Sketch:wireframe</li>
 		     <li>Full sitemap</li>
 		     <li>Fill wireframe</li>
