--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  <li>Module 4
 		   <!--Start nested list-->
 		    <ol>
-		     <li>Full sitemap</li>
+		     <li><a href="sitemap.pdf" target="_blank">Full sitemap</li>
 		     <li>Fill wireframe</li>
 		     <li>Rationale</li>
 		    </ol>
