--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		  <li>Module 4
 		   <!--Start nested list-->
 		    <ol>
-		     <li><a href="sitemap.pdf" target="_blank">Full sitemap</li>
-		     <li>Fill wireframe</li>
+		     <li><a href="sitemap.pdf" target="_blank">Sitemap</li>
+		     <li><a href="home.pdf" target="blank">Navigation</li>
 		     <li>Rationale</li>
 		    </ol>
 		    <!--end nested list-->
