--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		    <ol>
 		     <li><a href="sitemap.pdf" target="_blank">Sitemap</li>
 		     <li><a href="home.pdf" target="blank">Navigation</li>
-		     <li>Rationale</li>
+		     <li><a href="module4rationale.pdf" target="blank">Rationale</li>
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
