--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
 		   <li><a href="module5.pdf" target="_blank">Module 5</li>
-                   
+                   <!--Start nested list-->
+		    <ol>
+		     <li>Home/Bio</li>
+		     <li>Writing</li>
+		     <li>Photography</li>
+                     <li>Resume</li>
+                     <li>Contact</li>
+                     <li>Rationale</li>
+		    </ol>
+		    <!--end nested list-->
 		  
 	  </ul>
 
