--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		  <li><a href="module1.pdf" target="_blank">Module 1</a></li>
 		  <li><a href="module2.pdf" target="_blank">Module 2</a></li>
 		  <li><a href="module3.pdf" target="_blank">Module 3</a></li>
-		  <li>Module 4
+		  <li>Module 4</li>
 		   <!--Start nested list-->
 		    <ol>
 		     <li><a href="sitemap.pdf" target="_blank">Sitemap</li>
@@ -27,7 +27,7 @@
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
-		   <li><a href="module5.pdf" target="_blank">Module 5</li>
+		   <li>Module 5</li>
                    <!--Start nested list-->
 		    <ol>
 		     <li>Home/Bio</li>
