--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  <li>Module 4</li>
 		   <!--Start nested list-->
 		    <ol>
-		     <li><a href="sitemap.pdf" target="_blank">Sitemap</li>
+		     <li><a href="sitemap.pdf" target="blank">Sitemap</li>
 		     <li><a href="home.pdf" target="blank">Navigation</li>
 		     <li><a href="module4rationale.pdf" target="blank">Rationale</li>
 		    </ol>
@@ -30,11 +30,11 @@
 		   <li>Module 5</li>
                    <!--Start nested list-->
 		    <ol>
-		     <li>Home/Bio</li>
-		     <li>Writing</li>
-		     <li>Photography</li>
-                     <li>Resume</li>
-                     <li>Contact</li>
+		     <li><a href="home.pdf" target="blank">Home/Bio</li>
+		     <li><a href="writing.pdf" target="blank">Writing</li>
+		     <li><a href="writing.pdf" target="blank">Photography</li>
+                     <li><a href="resume.pdf" target="blank">Resume</li>
+                     <li><a href="contact.pdf" target="blank">Contact</li>
                      <li>Rationale</li>
 		    </ol>
 		    <!--end nested list-->
