--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 		  <li>Module 4</li>
 		   <!--Start nested list-->
 		    <ol>
-		     <li><a href="sitemap.pdf" target="blank">Sitemap</li>
-		     <li><a href="home.pdf" target="blank">Navigation</li>
-		     <li><a href="module4rationale.pdf" target="blank">Rationale</li>
+		     <li><a href="sitemap.pdf" target="blank">Sitemap</a></li>
+		     <li><a href="home.pdf" target="blank">Navigation</a></li>
+		     <li><a href="module4rationale.pdf" target="blank"></a>Rationale</li>
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
 		   <li>Module 5</li>
                    <!--Start nested list-->
 		    <ol>
-		     <li><a href="home.pdf" target="blank">Home/Bio</li>
-		     <li><a href="writing.pdf" target="blank">Writing</li>
-		     <li><a href="writing.pdf" target="blank">Photography</li>
-                     <li><a href="resume.pdf" target="blank">Resume</li>
-                     <li><a href="contact.pdf" target="blank">Contact</li>
+		     <li><a href="home.pdf" target="blank">Home/Bio</a></li>
+		     <li><a href="writing.pdf" target="blank">Writing</a></li>
+		     <li><a href="writing.pdf" target="blank">Photography</a></li>
+                     <li><a href="resume.pdf" target="blank">Resume</a></li>
+                     <li><a href="contact.pdf" target="blank">Contact</a></li>
                      <li>Rationale</li>
 		    </ol>
 		    <!--end nested list-->
