--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 		     <li><a href="writing.pdf" target="blank">Photography</a></li>
                      <li><a href="resume.pdf" target="blank">Resume</a></li>
                      <li><a href="contact.pdf" target="blank">Contact</a></li>
-                     <li>Rationale</li>
+                     <li><a href="module5rationale.pdf" target="blank">Rationale</a></li>
 		    </ol>
 		    <!--end nested list-->
-		  
+		   </li><!--close list item containing nested list-->
+                   <li>Module 6</li>
+                   <li>Module 7</li>
 	  </ul>
 
   </div>
