--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
                    <li>Module 6</li>
+                   <!--Start nested list-->
+		    <ol>
+		     <li><a href="color-palette.psd" target="blank">Palette Template</a></li>
+		     <li><a href="" target="blank">Typeface Template</a></li>
+		     <li><a href="" target="blank">Design Comp</a></li>
+                     <li><a href="" target="blank">Rationale</a></li>
+		    </ol>
+		    <!--end nested list-->
+		   </li><!--close list item containing nested list-->
                    <li>Module 7</li>
 	  </ul>
 
