--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                    <!--Start nested list-->
 		    <ol>
 		     <li><a href="color-palette.psd" target="blank">Palette Template</a></li>
-		     <li><a href="" target="blank">Typeface Template</a></li>
+		     <li><a href="typecard.psd" target="blank">Typecard Template</a></li>
 		     <li><a href="" target="blank">Design Comp</a></li>
                      <li><a href="" target="blank">Rationale</a></li>
 		    </ol>
