--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 		    <ol>
 		     <li><a href="color-palette.psd" target="blank">Palette Template</a></li>
 		     <li><a href="typecard.psd" target="blank">Typecard Template</a></li>
-		     <li><a href="" target="blank">Design Comp</a></li>
+		     <li><a href="home landing.psd" target="blank">Landing Page</a></li>
+                     <li><a href="home landingwriting.psd" target="blank">Writing</a></li>
+                     <li><a href="photography.psd" target="blank">Photography</a></li>
+                     <li><a href="resume.psd" target="blank">Resume</a></li>
+                     <li><a href="contact.psd" target="blank">Contact</a></li>        
                      <li><a href="" target="blank">Rationale</a></li>
 		    </ol>
 		    <!--end nested list-->
