--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                      <li><a href="photography.psd" target="blank">Photography</a></li>
                      <li><a href="resume.psd" target="blank">Resume</a></li>
                      <li><a href="contact.psd" target="blank">Contact</a></li>        
-                     <li><a href="" target="blank">Rationale</a></li>
+                     <li><a href="mod 6 rationale.pdf" target="blank">Rationale</a></li>
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
