--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
-                   <li>Module 7</li>
+                   <li><a href="module 7.pdf" target="_blank">Module 7</a></li>
 	  </ul>
 
   </div>
