--- a/index.html
+++ b/index.html
@@ -16,44 +16,44 @@
   
 	  <ul>
 		  <li><a href="module1/module1.pdf" target="_blank">Module 1</a></li>
-		  <li><a href="module2.pdf" target="_blank">Module 2</a></li>
-		  <li><a href="module3.pdf" target="_blank">Module 3</a></li>
+		  <li><a href="module2/module2.pdf" target="_blank">Module 2</a></li>
+		  <li><a href="module3/module3.pdf" target="_blank">Module 3</a></li>
 		  <li>Module 4</li>
 		   <!--Start nested list-->
 		    <ol>
-		     <li><a href="sitemap.pdf" target="blank">Sitemap</a></li>
-		     <li><a href="home.pdf" target="blank">Navigation</a></li>
-		     <li><a href="module4rationale.pdf" target="blank">Rationale</a></li>
+		     <li><a href="module4/sitemap.pdf" target="blank">Sitemap</a></li>
+		     <li><a href="module4/home.pdf" target="blank">Navigation</a></li>
+		     <li><a href="module4/module4rationale.pdf" target="blank">Rationale</a></li>
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
 		   <li>Module 5</li>
                    <!--Start nested list-->
 		    <ol>
-		     <li><a href="home.pdf" target="blank">Home/Bio</a></li>
-		     <li><a href="writing.pdf" target="blank">Writing</a></li>
-		     <li><a href="writing.pdf" target="blank">Photography</a></li>
-                     <li><a href="resume.pdf" target="blank">Resume</a></li>
-                     <li><a href="contact.pdf" target="blank">Contact</a></li>
-                     <li><a href="module5rationale.pdf" target="blank">Rationale</a></li>
+		     <li><a href="module4/home.pdf" target="blank">Home/Bio</a></li>
+		     <li><a href="module5/writing.pdf" target="blank">Writing</a></li>
+		     <li><a href="module5.writing.pdf" target="blank">Photography</a></li>
+                     <li><a href="module5/resume.pdf" target="blank">Resume</a></li>
+                     <li><a href="module5/contact.pdf" target="blank">Contact</a></li>
+                     <li><a href="module5/module5rationale.pdf" target="blank">Rationale</a></li>
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
                    <li>Module 6</li>
                    <!--Start nested list-->
 		    <ol>
-		     <li><a href="color-palette.psd" target="blank">Palette Template</a></li>
-		     <li><a href="typecard.psd" target="blank">Typecard Template</a></li>
-		     <li><a href="home landing.psd" target="blank">Landing Page</a></li>
-                     <li><a href="home landingwriting.psd" target="blank">Writing</a></li>
-                     <li><a href="photography.psd" target="blank">Photography</a></li>
-                     <li><a href="resume.psd" target="blank">Resume</a></li>
-                     <li><a href="contact.psd" target="blank">Contact</a></li>        
-                     <li><a href="mod 6 rationale.pdf" target="blank">Rationale</a></li>
+		     <li><a href="module6/color-palette.psd" target="blank">Palette Template</a></li>
+		     <li><a href="module6/typecard.psd" target="blank">Typecard Template</a></li>
+		     <li><a href="module6/home landing.psd" target="blank">Landing Page</a></li>
+                     <li><a href="module6/writing.psd" target="blank">Writing</a></li>
+                     <li><a href="module6/photography.psd" target="blank">Photography</a></li>
+                     <li><a href="module6/resume.psd" target="blank">Resume</a></li>
+                     <li><a href="module6/contact.psd" target="blank">Contact</a></li>        
+                     <li><a href="module6/mod 6 rationale.pdf" target="blank">Rationale</a></li>
 		    </ol>
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
-                   <li><a href="module 7.pdf" target="_blank">Module 7</a></li>
+                   <li><a href="module7/module 7.pdf" target="_blank">Module 7</a></li>
 	  </ul>
 
   </div>
