--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		    <ol>
 		     <li><a href="module4/home.pdf" target="blank">Home/Bio</a></li>
 		     <li><a href="module5/writing.pdf" target="blank">Writing</a></li>
-		     <li><a href="module5.writing.pdf" target="blank">Photography</a></li>
+		     <li><a href="module5/writing.pdf" target="blank">Photography</a></li>
                      <li><a href="module5/resume.pdf" target="blank">Resume</a></li>
                      <li><a href="module5/contact.pdf" target="blank">Contact</a></li>
                      <li><a href="module5/module5rationale.pdf" target="blank">Rationale</a></li>
