--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		    <!--end nested list-->
 		   </li><!--close list item containing nested list-->
                    <li><a href="module7/module 7.pdf" target="_blank">Module 7</a></li>
+		   <li><a href="module8/module8.pdf" target="_blank">Module 8</a></li>
 	  </ul>
 
   </div>
