--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
 		   </li><!--close list item containing nested list-->
                    <li><a href="module7/module 7.pdf" target="_blank">Module 7</a></li>
 		   <li><a href="module8/module8.pdf" target="_blank">Module 8</a></li>
+ 		  <!--Start nested list-->
+		  <li>Module 9</li>
+		    <ol>
+		     <li><a href="" target="blank">Original Photo</a></li>
+		     <li><a href="" target="blank">Web Optimized Photo (JPG)</a></li>
+		     <li><a href="" target="blank">PSD Header</a></li>
+                     <li><a href="" target="blank">PNG From Header</a></li>
+                    </ol>
+		    <!--end nested list-->
 	  </ul>
 
   </div>
