--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
  		  <!--Start nested list-->
 		  <li>Module 9</li>
 		    <ol>
-		     <li><a href="" target="blank">Original Photo</a></li>
-		     <li><a href="" target="blank">Web Optimized Photo (JPG)</a></li>
-		     <li><a href="" target="blank">PSD Header</a></li>
-                     <li><a href="" target="blank">PNG From Header</a></li>
+		     <li><a href="module9/module9.jpg" target="_blank">Original Photo</a></li>
+		     <li><a href="module9/module9_web.jpg" target="_blank">Web Optimized Photo (JPG)</a></li>
+		     <li><a href="" target="_blank">PSD Header</a></li>
+                     <li><a href="" target="_blank">PNG From Header</a></li>
                     </ol>
 		    <!--end nested list-->
 	  </ul>
