--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  		  <!--Start nested list-->
 		  <li>Module 9</li>
 		    <ol>
-		     <li><a href="module9/module9.jpg" target="_blank">Original Photo</a></li>
+		     <li><a href="module9/module9.JPG" target="_blank">Original Photo</a></li>
 		     <li><a href="module9/module9_web.jpg" target="_blank">Web Optimized Photo (JPG)</a></li>
 		     <li><a href="module9" target="_blank">PSD Header</a></li>
                      <li><a href="module9" target="_blank">PNG From Header</a></li>
