--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
   
   <footer>
-	  <p>Copyright &copy; Kate Johnson</p>
+	  <p>Copyright 2014 &copy; Kate Johnson</p>
   </footer>
 
 </body>
