--- a/portfolio/writing.html
+++ b/portfolio/writing.html
@@ -2,3 +2,7 @@
 <head>
 <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
+ </head>
+ <h1>Writing Samples</h1>
+ </html>
+ 
