--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,5 @@
 <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
-<body>
-</body>
+<h1>Welcome!</h1>
 </html>
