--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,5 +3,10 @@
 <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
-<h1>Welcome!</h1>
+
+<body>
+	<h1>Welcome!</h1>
+		<p> This is my page. My professor is making me create it. I kind of hate doing this.</p>
+	
+</body>
 </html>
