--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -3,5 +3,9 @@
 <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
+<body>
+
 <h1>Resume</h1>
+
+</body>
 </html>
