--- a/portfolio/writing.html
+++ b/portfolio/writing.html
@@ -3,6 +3,10 @@
 <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
  </head>
+ <body>
+ 
  <h1>Writing Samples</h1>
+ 
+ </body>
  </html>
  
