--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,9 +4,14 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-	 
+
+  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/writing" class="button">Portfolio</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
+
 	<h1>Welcome!</h1>
-		<p> This is my page. My professor is making me create it. I kind of hate doing this.</p>
+		<p> This is my page. </p>
 	
 </body>
 </html>
