--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/writing" class="button">Portfolio</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" target="_blank" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/writing" target="_blank" class="button">Portfolio</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" target="_blank" class="button">Contact</a>
 
 	<h1>Welcome!</h1>
 		<p> This is my page. </p>
