--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -5,7 +5,15 @@
 </head>
 <body>
 
-<h1>Contact</h1>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" target="_blank" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/writing" target="_blank" class="button">Portfolio</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" target="_blank" class="button">Contact</a>
 
+	
+		<p> Katrina <em>Kate</em> Johnson</p>
+		<p> 517.582.0540 </p>
+		<p>kate.johnson47@gmail.com</p>
+	
 </body>
 </html>
