--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                      <li><a href="module9/mod9.fw.png" target="_blank">PNG From Header</a></li>
                     </ol>
 		    <!--end nested list-->
+		  <li><a href="module10/module10.html" target="_blank">Module 10</a></li>
+			
 	  </ul>
 
   </div>
