--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </ol>
 		    <!--end nested list-->
 					<li><a href="module10/module10.htm" target="_blank">Module 10</a></li>
-			
+					<li><a href="http://www.codecademy.com/k8johnson" target=_"blank">Module 13</a></li>
 	  </ul>
 
   </div>
