--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,14 +4,14 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+<nav>
   <a href="http://k8johnson.github.io/demo/portfolio/index" target="_blank" class="button">Home</a>
   <a href="http://k8johnson.github.io/demo/portfolio/writing" target="_blank" class="button">Portfolio</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
+  <a href="tp://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
   <a href="http://k8johnson.github.io/demo/portfolio/contact" target="_blank" class="button">Contact</a>
-
-	<h1>Welcome!</h1>
-		<p> This is my page. </p>
-	
+</nav>
+  <h1> Welcome </h1>
+ 	<p>My name is Kate Johnson and I am a Professional Writing student at Michigan State University.</p>
+  
 </body>
 </html>
