--- a/portfolio/writing.html
+++ b/portfolio/writing.html
@@ -2,11 +2,16 @@
 <head>
 <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
- </head>
- <body>
- 
- <h1>Writing Samples</h1>
- 
- </body>
- </html>
- 
+</head>
+<body>
+<nav>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" target="_blank" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/writing" target="_blank" class="button">Portfolio</a>
+  <a href="tp://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" target="_blank" class="button">Contact</a>
+</nav>
+  <h1> Portfolio </h1>
+ 	<a href="http://k8johnson.github.io/demo/portfolio/portfoliosample.htm" target="_blank" class="button">Sample</a>
+  
+</body>
+</html>
