--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <nav>
-  <a href="http://k8johnson.github.io/demo/portfolio/index" target="_blank" class="button">Home</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/portfolio" target="_blank" class="button">Portfolio</a>
-  <a href="tp://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/contact" target="_blank" class="button">Contact</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
+  <a href="tp://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
   <h1> Welcome </h1>
  	<p>My name is Kate Johnson and I am a Professional Writing student at Michigan State University.</p>
