--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -4,8 +4,15 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<h1>Resume</h1>
-
+<nav>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
+  <a href="tp://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
+</nav>
+  <h1> Résumé </h1>
+ 	<a href="http://k8johnson.github.io/demo/portfolio/resume.pdf" target="_blank" class="button">Résumé PDF</a>
+  <iframe src="http://docs.google.com/gview?url=http://k8johnson.github.io/demo/portfolio/resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+  
 </body>
 </html>
