--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <nav>
-  <a href="http://k8johnson.github.io/demo/portfolio/index" target="_blank" class="button">Home</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/writing" target="_blank" class="button">Portfolio</a>
-  <a href="tp://k8johnson.github.io/demo/portfolio/resume" target="_blank" class="button">Résumé</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/contact" target="_blank" class="button">Contact</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
+  <a href="tp://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
   <h1> Portfolio </h1>
  	<a href="http://k8johnson.github.io/demo/portfolio/portfoliosample.htm" target="_blank" class="button">Sample</a>
