--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -11,8 +11,12 @@
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
   <h1> Résumé </h1>
- 	<a href="http://k8johnson.github.io/demo/portfolio/resume.pdf" target="_blank" class="button">Résumé PDF</a>
+  <div class="container">
+    
+    <a href="http://k8johnson.github.io/demo/portfolio/resume.pdf" target="_blank" class="button">Résumé PDF</a><br>
+    <br>
   <iframe src="http://docs.google.com/gview?url=http://k8johnson.github.io/demo/portfolio/resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+  </div>
   
 </body>
 </html>
