--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
 <nav>
   <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
   <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
-  <a href="tp://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
   <h1> Welcome </h1>
