--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -11,7 +11,9 @@
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
   <h1> Portfolio </h1>
+  <div class="container">
  	<a href="http://k8johnson.github.io/demo/portfolio/portfoliosample.htm" target="_blank" class="button">Sample</a>
+  </div>
   
 </body>
 </html>
