--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,8 +4,10 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
+	<img src="http://k8johnson.github.io/demo/module9/mod9.jpg">
+<br>
 <nav>
-  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/index" class="button active">Home</a>
   <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
   <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
