--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,9 +4,11 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
+	<img src="http://k8johnson.github.io/demo/module9/mod9.jpg">
+<br>
 <nav>
   <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
-  <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
+  <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button active">Portfolio</a>
   <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
