--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -11,10 +11,10 @@
   <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button active">Contact</a>
 
-	
+	<br>
 		<p> Katrina <em>Kate</em> Johnson</p>
 		<p> 517.582.0540 </p>
-		<p>kate.johnson47@gmail.com</p>
+		<p><a href="mailto:kate.johnson47@gmail.com>kate.johnson47@gmail.com</a></p>
 	
 </body>
 </html>
