--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -14,7 +14,7 @@
 	<br>
 		<p> Katrina <em>Kate</em> Johnson</p>
 		<p> 517.582.0540 </p>
-		<p><a href="mailto:kate.johnson47@gmail.com>kate.johnson47@gmail.com</a></p>
+		<p><a href="mailto:kate.johnson47@gmail.com">kate.johnson47@gmail.com</a></p>
 	
 </body>
 </html>
