--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -13,8 +13,8 @@
 
 	<br>
 		<p> Katrina <em>Kate</em> Johnson</p>
-		<p> 517.582.0540 </p>
-		<p><a href="mailto:kate.johnson47@gmail.com">kate.johnson47@gmail.com</a></p>
+		<p> 000-000-0000 </p>
+		<p><a href="mailto:email@gmail.com"></a></p>
 	
 </body>
 </html>
