--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     </ol>
 		    <!--end nested list-->
 					<li><a href="module10/module10.htm" target="_blank">Module 10</a></li>
+					<li><a href="module11/module11.htm" target="blank">Module 11</a></li>
 					<li><a href="http://www.codecademy.com/k8johnson" target=_"blank">Module 13</a></li>
 	  </ul>
 
