--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,16 +4,17 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<img src="http://k8johnson.github.io/demo/module9/mod9.jpg">
-<br>
+  <h1>Kate Johnson</h1>
+  <br>
 <nav>
   <a href="http://k8johnson.github.io/demo/portfolio/index" class="button active">Home</a>
   <a href="http://k8johnson.github.io/demo/portfolio/portfolio" class="button">Portfolio</a>
   <a href="http://k8johnson.github.io/demo/portfolio/resume" class="button">Résumé</a>
   <a href="http://k8johnson.github.io/demo/portfolio/contact" class="button">Contact</a>
 </nav>
-  <h1> Welcome </h1>
- 	<p>My name is Kate Johnson and I am a Professional Writing student at Michigan State University.</p>
+  <br>
+  <br>
+ 	<p>My name is Kate Johnson and I am a Professional Writing student at Michigan State University. My focus is on freelance work in Editing & Publishing.</p>
   
 </body>
 </html>
