--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,7 +4,7 @@
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<img src="http://k8johnson.github.io/demo/module9/mod9.jpg">
+	<h1>Kate Johnson</h1>
 <br>
 <nav>
   <a href="http://k8johnson.github.io/demo/portfolio/index" class="button">Home</a>
